# scoring-project

./: .gitignore  README.md  pyproject.toml  report.ipynb
data/: kredyty_auto_Scoring2025s.xlsx
notebooks/: notebook.ipynb
